# nouveau

./: .astylerc  CMakeLists.txt  Makefile  README.md  TODO.md
.github/workflows/: format-compile-test.yaml
source/: ast.cpp  codegen.cpp  config.h.in  file.cpp  lexer.cpp  main.cpp  parser.cpp  semer.cpp  token.cpp  utils.cpp
source/backend/: constant_folding.cpp
source/backend/headers/: constant_folding.hpp
source/frontend/: ast.cpp  lexer.cpp  semer.cpp  token.cpp  utils.cpp
source/frontend/headers/: ast.hpp  lexer.hpp  parser.hpp  semer.hpp  utils.hpp
source/headers/: ast.hpp  codegen.hpp  file.h  file.hpp  lexer.h  lexer.hpp  parser.hpp  semer.hpp  token.h  token.hpp  utils.hpp
tests/: test_ast.cpp  test_constant_folding.cpp  test_file.cpp  test_lexer.cpp  test_parser.cpp  test_runner.cpp  test_semer.cpp  test_token.cpp  test_utils.cpp
tests/extras/: catch_amalgamated.cpp  catch_amalgamated.hpp
tests/sample_code/: arithmetic.nv  assignment.nv  complex_type.nv  conditional.nv  constant_folding.nv  function.nv  function_1.nv  function_2.nv  loop.nv  string.nv  string_concatenation.nv  symbol-table.nv  test.nv
tests/sample_code/constant_folding/: constant_folding.nv  identifiers.nv  logical.nv
